feat: Update dependencies in package.json to replace @emailjs/browser with @emailjs/nodejs and add dotenv

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
+    "@emailjs/nodejs": "^5.0.2",
+    "dotenv": "^17.2.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
